# journeyspotter

./: .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  README.md  create_sample_image.py  create_sample_video.py  create_travel_test_image.py  demo.sh  demo_ai_travel.py  docker-compose.yml  journey_spotter.py  main.py  ocr_processor.py  pyproject.toml  requirements.txt  travel_intelligence.py  validate_fix.py
.streamlit/: config.toml
adapters/anomaly/: __init__.py  anomaly_model.py  anomaly_scorer.py  frame_encoder.py
adapters/llm/: processor.py
adapters/ocr/: processor.py
adapters/storage/: file_storage.py
adapters/video/: processor.py
api/: dependencies.py  main.py  models.py  routes.py
config/: settings.py
core/: analysis_service.py  anomaly_service.py  interfaces.py
domain/: models.py  ports.py
tests/: conftest.py  test_anomaly_detection.py  test_domain.py
ui/: streamlit_app.py
